Src/Driver/PI_F701/include/piapi.h

typedef struct qerror
{
   int32 point;
   int32 error;
} QERROR, PIPTR *LPQERROR;
/* static struct qerrors */
typedef struct qerrors
{
   int32 syserror;         /*  current system errors  */
   int32 numbpterrs;       /*  number of individual point errors  */
   struct qerror *qerr;   /*  list of points in error  */
} QERRORS, PIPTR *LPQERRORS;
/*  exception reporting structure  08-JUN-93 */
typedef struct
{
   float  newval;
   int32   newstat;
   int32   newtime;
   float  oldval;
   int32   oldstat;
   int32   oldtime;
   float  prevval;
   int32   prevstat;
   int32   prevtime;
   float  excdeveng;
   int32   excmin;
   int32   excmax;
} PI_EXCEPT;
/* PI API Function Prototypes ------------------------------------------------*/
PIINT32 piar_calculation( int32 PIPTR *count, int32 times[], float rvals[],
             int32 istats[], char PIPTR *exp );
PIINT32 piar_compvalues( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[], int32 rev );
PIINT32 piar_compvaluesfil( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[], char PIPTR *exp, int32 rev, int32 fil );
PIINT32 piar_deletevalue( int32 pt, int32 timedate );
PIINT32 piar_interpvalues( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[] );
PIINT32 piar_interpvaluesfil( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[], char PIPTR *exp );
PIINT32 piar_panvalues( int32 pt, int32 PIPTR *count, int32 PIPTR *timedate );
PIINT32 piar_plotvalues( int32 pt, int32 intervals, int32 PIPTR *count,
            int32 times[], float rvals[], int32 istats[] );
PIINT32 piar_putvalue( int32 pt, float rval, int32 istat, int32 timedate,
              int32 wait );
PIINT32 piar_replacevalue( int32 pt, int32 timedate, float rval, int32 istat );
PIINT32 piar_summary( int32 pt, int32 PIPTR *time1, int32 PIPTR *time2,
   float PIPTR *rval, float PIPTR *pctgood, int32 code );
PIINT32 piar_timedvalues( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[], int32 prev );
PIINT32 piar_timedvaluesfil( int32 pt, int32 PIPTR *count, int32 times[],
   float rvals[], int32 istats[], char *exp );
PIINT32 piar_timefilter( int32 starttime, int32 endtime, char *exp, 
   int32 *tottime, int32 *passtime);
PIINT32 piar_value( int32 pt, int32 PIPTR *timedate, int32 mode,
   float PIPTR *rval, int32 *istat );
PIINT32 piel_addevnt( int32 PIPTR *time, int32 PIPTR *number, int32 group,
             int32 type, char *msg, int32 timeout );
PIINT32 piel_evntactn( int32 PIPTR *time, int32 PIPTR *number,
              int32 PIPTR *group, int32 *type, int32 len, char *msg, int32 action, int32 timeout );
PIINT32 pilg_checklogfile( int action, const char PIPTR *logfile );
PIINT32 pilg_formputlog( const char PIPTR *msg, const char PIPTR *idstring);
PIINT32 pilg_puthomelog( char PIPTR *msg );
PIINT32 pilg_putlog( char PIPTR *msg );
PIINT32 pilg_putoutput( char PIPTR *msg, int32 flags );
PIINT32 pipt_compspecs( int32 pt, int32 PIPTR *compdev, int32 PIPTR *compmin,
               int32 PIPTR *compmax );
PIINT32 pipt_compspecseng( int32 pt, float PIPTR *compdeveng,
              int32 PIPTR *compmin, int32 PIPTR *compmax );
PIINT32 pipt_dates( int32 pt, int32 PIPTR *creationdate, char PIPTR *creator,
           int32 crlen, int32 PIPTR *changedate, char PIPTR *changer, int32 chlen );
PIINT32 pipt_descriptor( int32 pt, char PIPTR *str, int32 len );
PIINT32 pipt_digcode( int32 PIPTR *digcode, char PIPTR *digstring  );
PIINT32 pipt_digcodefortag( int32 pt, int32 PIPTR *digcode, char PIPTR *digstring  );
PIINT32 pipt_digpointers( int32 pt, int32 PIPTR *digcode, int32 PIPTR *dignumb );
PIINT32 pipt_digstate( int32 digcode, char PIPTR *digstate, int32 len );
PIINT32 pipt_displaydigits (int32 point, int32 PIPTR *displaydigits );
PIINT32 pipt_engunitstring( int32 pt, char PIPTR *engunitstring, int32 len );
PIINT32 pipt_engunstring( int32 engunitcode, char PIPTR *engunitstring,
             int32 len );
PIINT32 pipt_excspecseng( int32 pt, float PIPTR *excdeveng, int32 PIPTR *excmin,
             int32 *excmax );
PIINT32 pipt_exdesc( int32 pt, char PIPTR *exdesc, int32 len );
PIINT32 pipt_findpoint( char PIPTR *tagname, int32 PIPTR *pt );
PIINT32 pipt_inprocbits( int32 pt, int32 PIPTR *larchiving,
            int32 PIPTR *lcompressing, int32 PIPTR *filtercode );
PIINT32 pipt_instrumenttag ( int32 pt, char PIPTR *instrumenttag, int32 len );
PIINT32 pipt_location( int32 pt, int32 location[5] );
PIINT32 pipt_nextptwsource( char source, int32 PIPTR *pt );
PIINT32 pipt_pointid( int32 pt, int32 PIPTR *ipt );
PIINT32 pipt_pointsource( int32 pt, char PIPTR *source );
PIINT32 pipt_pointtype( int32 pt, char PIPTR *type );
PIINT32 pipt_ptexist( int32 pt );
PIINT32 pipt_recordtype( int32 pt, int32 PIPTR *steps );
PIINT32 pipt_rescode( int32 pt, int32 PIPTR *rescode );
PIINT32 pipt_scale( int32 pt, float PIPTR *zero, float PIPTR *span );
PIINT32 pipt_scan( int32 pt, int32 PIPTR *lscan );
PIINT32 pipt_signupforupdates( void );
PIINT32 pipt_sourcept ( int32 pt, int32 PIPTR *sourcept );
PIINT32 pipt_squareroot( int32 pt, int32 PIPTR *squareroot );
PIINT32 pipt_tag( int32 pt, char PIPTR *tag, int32 len );
PIINT32 pipt_taglong( int32 pt, char PIPTR *tag, int32 len );
PIINT32 pipt_tagpreferred( int32 pt, char PIPTR *tag, int32 len );
PIINT32 pipt_totalspecs( int32 pt, int32 PIPTR *totalcode, float *convers );
PIINT32 pipt_typicalvalue( int32 pt, float PIPTR *typicalvalue );
PIINT32 pipt_updates( int32 PIPTR *pt, char PIPTR *tagname, int32 len,
             int32 PIPTR *mode );
PIINT32 pipt_userattribs (int32 pt, int32 PIPTR *userint1, int32 PIPTR *userint2,
             float32 PIPTR *userreal1, float32 PIPTR *userreal2);
PIINT32 pipt_wildcardsearch( char PIPTR *tagmask, int32 direction,
                int32 PIPTR *found, char PIPTR *tagname, int32 len, int32 PIPTR *pt,
                int32 PIPTR *numfound );
PIINT32 pisn_evmdisestablish( int32 PIPTR *count, int32 PIPTR *pts );
PIINT32 pisn_evmestablish( int32 PIPTR *count, int32 PIPTR *pts );
PIINT32 pisn_evmexceptions( int32 PIPTR *count, int32 PIPTR *pt,
   float PIPTR *rval, int32 PIPTR *istat, int32 PIPTR *timedate );
PIINT32 pisn_getsnapshot( int32 pt, float PIPTR *rval, int32 PIPTR *istat,
             int32 *timedate );
PIINT32 pisn_getsnapshots ( int32 *pt, float PIPTR *rval, int32 PIPTR *istat,
               int32 PIPTR *timedate, int32 PIPTR *err, int32 count );
PIINT32 pisn_putsnapshot( int32 pt, float rval,  int32 istat, int32 timedate );
PIINT32 pisn_putsnapshots ( int32 PIPTR *pt, float PIPTR *rval,
               int32 PIPTR *istat, int32 PIPTR *timedate, int32 PIPTR *err, int32 count );
PIINT32 pisn_sendexceptions( int32 pt, char type, float PIPTR *oldval,
   short PIPTR *oldstat, int32 PIPTR *oldtime, float PIPTR *prevval,
      short PIPTR *prevstat, int32 PIPTR *prevtime, float newval,
         short newstat, int32 newtime, float excdeveng, short excmin,
            short excmax, int32 PIPTR *count );
PIINT32 pisn_sendexcepstruc ( int32 pt, char type, PI_EXCEPT PIPTR *excpt,
                 int32 PIPTR *count );
PIINT32 pisn_sendexcepstrucq ( int32 pt, char type, PI_EXCEPT PIPTR *excpt,
             int32 PIPTR *count, pibool queueing, int32 PIPTR *numbpterrs,
             QERROR PIPTR *qerrs );
LPQERRORS PIWIN pisn_sendexceptionq (int32 pt, char type,
           float PIPTR *oldval, short PIPTR *oldstat, int32 PIPTR *oldtime,
           float PIPTR *prevval, short PIPTR *prevstat, int32 PIPTR *prevtime,
           float newval, short newstat, int32 newtime,
           float excdeveng, short excmin, short excmax,
           int32 PIPTR *count);
LPQERRORS PIWIN pisn_putsnapshotq ( int32 pt, float rval,
                   int32 istat, int32 timedate );
LPQERRORS PIWIN pisn_flushputsnapq ( void );
PIINT32 pitm_delay ( uint32 mseconds );
PIINT32 pitm_fastservertime(void);
PIVOID  pitm_formtime( int32 timedate, char PIPTR *timestring, int32 len );
PIVOID  pitm_intsec( int32 PIPTR *timedate, int32 PIPTR timearray[6] );
PIINT32 pitm_parsetime( char PIPTR *str, int32 reltime, int32 PIPTR *timedate);
PIVOID  pitm_secint( int32 timedate, int32 PIPTR timearray[6] );
PIINT32 pitm_servertime( int32 PIPTR *servertime );
PIINT32 pitm_syncwithservertime( void );
PIINT32 pitm_systime( void );
PIINT32 piut_connect( const char PIPTR *procname );
PIINT32 piut_disconnect( void );
PIINT32 piut_disconnectnode( const char PIPTR *nodename );
PIINT32 piut_fastserverversion (int32 PIPTR *minorver, char PIPTR *buildid,
                                int32 buildlen );
PIINT32 piut_getapiversion ( char PIPTR *version, int32 len );
PIVOID  piut_getprotocolvers ( char PIPTR *vers, int32 len );
char PIPTR * PIPROC piut_getloginuser( void );
PIINT32 piut_getserverversion(int32 PIPTR *nodeid,
   char PIPTR *servername, int32 servernamelen,
   char PIPTR *version, int32 versionlen, char PIPTR *buildid, int32 buildidlen);
PIVOID  piut_inceventcounter( int32 counter, int32 count );
PIINT32 piut_ishome( void );
PIINT32 piut_login( const char PIPTR *, const char PIPTR *, int32 PIPTR * );
PIINT32 piut_netinfo( char PIPTR * namestr, int32 namelen,
   char PIPTR * addressstr, int32 addresslen, char PIPTR * typestr,
   int32 typelen );
PIINT32 piut_netnodeinfo( char PIPTR *namestr, int32 namelen,
   char PIPTR *addressstr, int32 addresslen, int32 PIPTR *connected );
PIINT32 piut_netserverinfo( char PIPTR *namestr, int32 namelen,
   char PIPTR *addressstr, int32 addresslen, int32 PIPTR *connected );
PIINT32 piut_setdefaultservernode( const char PIPTR *servername );
PIVOID  piut_setprocname ( const char PIPTR *pname );
PIINT32 piut_setservernode(const char PIPTR *servername);
PIVOID  piut_zeroeventcounter( int32 counter );