Src/Driver/PI_F701/include/piapi32.bas


'Function declarations
Declare Function piar_calculation Lib "piapi32.dll" (Count&, times&, rvals!, istats&, ByVal Expr$) As Long
Declare Function piar_compvalues Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&, ByVal rev&) As Long
Declare Function piar_compvaluesfil Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&, ByVal Expr$, ByVal rev&, ByVal fil&) As Long
Declare Function piar_deletevalue Lib "piapi32.dll" (ByVal pt&, ByVal timedate&) As Long
Declare Function piar_interpvalues Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&) As Long
Declare Function piar_interpvaluesfil Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&, ByVal Expr$) As Long
Declare Function piar_panvalues Lib "piapi32.dll" (ByVal pt&, Count&, timedate&) As Long
Declare Function piar_plotvalues Lib "piapi32.dll" (ByVal pt&, ByVal intervals&, Count&, times&, rvals!, istats&) As Long
Declare Function piar_putvalue Lib "piapi32.dll" (ByVal pt&, ByVal rval!, ByVal iStat&, ByVal timedate&, ByVal wait&) As Long
Declare Function piar_replacevalue Lib "piapi32.dll" (ByVal pt&, ByVal timedate&, ByVal rval!, ByVal iStat&) As Long
Declare Function piar_summary Lib "piapi32.dll" (ByVal pt&, time1&, time2&, rval!, pctgood!, ByVal code&) As Long
Declare Function piar_timedvalues Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&, ByVal prev&) As Long
Declare Function piar_timedvaluesfil Lib "piapi32.dll" (ByVal pt&, Count&, times&, rvals!, istats&, ByVal Expr$) As Long
Declare Function piar_timefilter Lib "piapi32.dll" (ByVal StartTime&, ByVal EndTime&, ByVal Expr$, tottime&, passtime&) As Long
Declare Function piar_value Lib "piapi32.dll" (ByVal pt&, timedate&, ByVal Mode&, rval!, iStat&) As Long
Declare Function piel_addevnt Lib "piapi32.dll" (PITime&, number&, ByVal group&, ByVal etype&, ByVal Msg$, ByVal timeout&) As Long
Declare Function piel_evntactn Lib "piapi32.dll" (PITime&, number&, group&, etype&, ByVal slen&, ByVal Msg$, ByVal action&, ByVal timeout&) As Long
Declare Function pilg_checklogfile Lib "piapi32.dll" (ByVal action&, ByVal LogFile$) As Long
Declare Function pilg_formputlog Lib "piapi32.dll" (ByVal Msg$, ByVal IdString$) As Long
Declare Function pilg_puthomelog Lib "piapi32.dll" (ByVal Msg$) As Long
Declare Function pilg_putlog Lib "piapi32.dll" (ByVal Msg$) As Long
Declare Function pilg_putoutput Lib "piapi32.dll" (ByVal Msg$, ByVal Flags&) As Long
Declare Function pipt_compspecs Lib "piapi32.dll" (ByVal pt&, compdev&, compmin&, compmax&) As Long
Declare Function pipt_compspecseng Lib "piapi32.dll" (ByVal pt&, compdeveng!, compmin&, compmax&) As Long
Declare Function pipt_dates Lib "piapi32.dll" (ByVal pt&, creationdate&, ByVal creator$, ByVal crlen&, changedate&, ByVal changer$, ByVal chlen&) As Long
Declare Function pipt_descriptor Lib "piapi32.dll" (ByVal pt&, ByVal desc$, ByVal slen&) As Long
Declare Function pipt_digcode Lib "piapi32.dll" (digcode&, ByVal digstring$) As Long
Declare Function pipt_digcodefortag Lib "piapi32.dll" (ByVal pt&, digcode&, ByVal digstring$) As Long
Declare Function pipt_digpointers Lib "piapi32.dll" (ByVal pt&, digcode&, dignumb&) As Long
Declare Function pipt_digstate Lib "piapi32.dll" (ByVal digcode&, ByVal digstate$, ByVal slen&) As Long
Declare Function pipt_displaydigits Lib "piapi32.dll" (ByVal pt&, displaydigits&) As Long
Declare Function pipt_engunitstring Lib "piapi32.dll" (ByVal pt&, ByVal engunitstring$, ByVal slen&) As Long
Declare Function pipt_engunstring Lib "piapi32.dll" (ByVal engunitcode&, ByVal engunitstring$, ByVal slen&) As Long
Declare Function pipt_excspecseng Lib "piapi32.dll" (ByVal pt&, ExcDevEng!, ExcMin&, ExcMax&) As Long
Declare Function pipt_exdesc Lib "piapi32.dll" (ByVal pt&, ByVal exdesc$, ByVal slen&) As Long
Declare Function pipt_findpoint Lib "piapi32.dll" (ByVal TagName$, pt&) As Long
Declare Function pipt_inprocbits Lib "piapi32.dll" (ByVal pt&, larchiving&, lcompressing&, filtercode&) As Long
Declare Function pipt_instrumenttag Lib "piapi32.dll" (ByVal pt&, ByVal instrumenttag$, ByVal slen&) As Long
Declare Function pipt_location Lib "piapi32.dll" (ByVal pt&, location&) As Long
Declare Function pipt_nextptwsource Lib "piapi32.dll" (ByVal source%, pt&) As Long
Declare Function pipt_pointid Lib "piapi32.dll" (ByVal pt&, ipt&) As Long
Declare Function pipt_pointsource Lib "piapi32.dll" (ByVal pt&, ByVal source$) As Long
Declare Function pipt_pointtype Lib "piapi32.dll" (ByVal pt&, ByVal PtType$) As Long
Declare Function pipt_ptexist Lib "piapi32.dll" (ByVal pt&) As Long
Declare Function pipt_recordtype Lib "piapi32.dll" (ByVal pt&, steps&) As Long
Declare Function pipt_rescode Lib "piapi32.dll" (ByVal pt&, rescode&) As Long
Declare Function pipt_scale Lib "piapi32.dll" (ByVal pt&, zero!, span!) As Long
Declare Function pipt_scan Lib "piapi32.dll" (ByVal pt&, lscan&) As Long
Declare Function pipt_signupforupdates Lib "piapi32.dll" () As Long
Declare Function pipt_sourcept Lib "piapi32.dll" (ByVal pt&, sourcept&) As Long
Declare Function pipt_squareroot Lib "piapi32.dll" (ByVal pt&, squareroot&) As Long
Declare Function pipt_tag Lib "piapi32.dll" (ByVal pt&, ByVal tag$, ByVal slen&) As Long
Declare Function pipt_taglong Lib "piapi32.dll" (ByVal pt&, ByVal tag$, ByVal slen&) As Long
Declare Function pipt_tagpreferred Lib "piapi32.dll" (ByVal pt&, ByVal tag$, ByVal slen&) As Long
Declare Function pipt_totalspecs Lib "piapi32.dll" (ByVal pt&, totalcode&, convers!) As Long
Declare Function pipt_typicalvalue Lib "piapi32.dll" (ByVal pt&, typicalvalue!) As Long
Declare Function pipt_updates Lib "piapi32.dll" (pt&, ByVal TagName$, ByVal slen&, Mode&) As Long
Declare Function pipt_userattribs Lib "piapi32.dll" (ByVal pt&, userint1&, userint2&, userreal1!, userreal2!) As Long
Declare Function pipt_wildcardsearch Lib "piapi32.dll" (ByVal tagmask$, ByVal direction&, found&, ByVal TagName$, ByVal slen&, pt&, numfound&) As Long
Declare Function pisn_evmdisestablish Lib "piapi32.dll" (Count&, pts&) As Long
Declare Function pisn_evmestablish Lib "piapi32.dll" (Count&, pts&) As Long
Declare Function pisn_evmexceptions Lib "piapi32.dll" (Count&, pt&, rval!, iStat&, timedate&) As Long
Declare Function pisn_getsnapshot Lib "piapi32.dll" (ByVal pt&, rval!, iStat&, timedate&) As Long
Declare Function pisn_getsnapshots Lib "piapi32.dll" (pt&, rval!, iStat&, timedate&, piapierror&, ByVal Count&) As Long
Declare Function pisn_putsnapshot Lib "piapi32.dll" (ByVal pt&, ByVal rval!, ByVal iStat&, ByVal timedate&) As Long
Declare Function pisn_putsnapshots Lib "piapi32.dll" (pt&, rval!, iStat&, timedate&, piapierror&, ByVal Count&) As Long
Declare Function pisn_sendexcepstruc Lib "piapi32.dll" (ByVal pt&, ByVal PtType%, except As PI_EXCEPT, Count&) As Long
Declare Function pisn_sendexceptions Lib "piapi32.dll" (ByVal pt&, ByVal PtType%, oldVal!, oldstat%, oldTime&, prevVal!, prevstat%, prevTime&, ByVal NewVal!, ByVal newstat%, ByVal newTime&, ByVal ExcDevEng!, ByVal ExcMin%, ByVal ExcMax%, Count&) As Long
Declare Function pisn_sendexcepstrucq Lib "piapi32.dll" (ByVal pt&, ByVal PtType%, except As PI_EXCEPT, Count&, ByVal Queueing%, numbptErrs&, qErrs As QERROR) As Long
'----- these functions have return types incompatible with Visual Basic
'Declare Function pisn_sendexceptionq Lib "piapi32.dll" (ByVal pt&, ByVal pttype%, oldval!, oldstat%, oldtime&, prevval!, prevstat%, prevtime&, ByVal newval!, ByVal newstat%, ByVal newtime&, ByVal excdeveng!, ByVal excmin%, ByVal excmax%, count&) As QERRORS
'Declare Function pisn_putsnapshotq Lib "piapi32.dll" (ByVal pt&, ByVal rval!, ByVal istat&, ByVal timedate&) As QERRORS
'Declare Function pisn_flushputsnapq Lib "piapi32.dll" () As QERRORS
Declare Function pitm_delay Lib "piapi32.dll" (ByVal mseconds&) As Long
Declare Function pitm_fastservertime Lib "piapi32.dll" () As Long
Declare Sub pitm_formtime Lib "piapi32.dll" (ByVal timedate&, ByVal timestring$, ByVal slen&)
Declare Sub pitm_intsec Lib "piapi32.dll" (timedate&, timearray&)
Declare Function pitm_parsetime Lib "piapi32.dll" (ByVal timestr$, ByVal reltime&, timedate&) As Long
Declare Sub pitm_secint Lib "piapi32.dll" (ByVal timedate&, timearray&)
Declare Function pitm_servertime Lib "piapi32.dll" (servertime&) As Long
Declare Function pitm_syncwithservertime Lib "piapi32.dll" () As Long
Declare Function pitm_systime Lib "piapi32.dll" () As Long
Declare Function piut_connect Lib "piapi32.dll" (ByVal ProcName$) As Long
Declare Function piut_disconnect Lib "piapi32.dll" () As Long
Declare Function piut_disconnectnode Lib "piapi32.dll" (ByVal SrvName$) As Long
Declare Function piut_fastserverversion Lib "piapi32.dll" (MinorVer&, ByVal buildid$, ByVal BuildLen&) As Long
Declare Function piut_getapiversion Lib "piapi32.dll" (ByVal version$, ByVal slen&) As Long
Declare Function piut_getloginuser Lib "piapi32.dll" () As Long
Declare Sub piut_getprotocolvers Lib "piapi32.dll" (ByVal Vers$, ByVal slen&)
Declare Function piut_getserverversion Lib "piapi32.dll" (NodeID&, ByVal ServerName$, ByVal servernamelen&, ByVal version$, ByVal versionlen&, ByVal buildid$, ByVal buildidlen&) As Long
Declare Sub piut_inceventcounter Lib "piapi32.dll" (ByVal counter&, ByVal Count&)
Declare Function piut_ishome Lib "piapi32.dll" () As Long
Declare Function piut_login Lib "piapi32.dll" (ByVal username$, ByVal password$, valid&) As Long
Declare Function piut_netinfo Lib "piapi32.dll" (ByVal namestr$, ByVal NameLen&, ByVal addressstr$, ByVal addresslen&, ByVal typestr$, ByVal typelen&) As Long
Declare Function piut_netnodeinfo Lib "piapi32.dll" (ByVal namestr$, ByVal NameLen&, ByVal addressstr$, ByVal addresslen&, connected&) As Long
Declare Function piut_netserverinfo Lib "piapi32.dll" (ByVal namestr$, ByVal NameLen&, ByVal addressstr$, ByVal addresslen&, connected&) As Long
Declare Function piut_setdefaultservernode Lib "piapi32.dll" (ByVal ServerName$) As Long
Declare Sub piut_setprocname Lib "piapi32.dll" (ByVal ProcName$)
Declare Function piut_setservernode Lib "piapi32.dll" (ByVal ServerName$) As Long
Declare Sub piut_zeroeventcounter Lib "piapi32.dll" (ByVal counter&)
